[project]
name = "lamina"
version = "0.1.0"
description = "A machine learning program to help look for monolayers in old research images."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-image (>=0.25.2,<0.26.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
